--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 	  <h1> Want to get started? </h1>
         <hr/>
         
-        Students of NIU: Instances of WebJCL will be up for use within the next couple of weeks. 
-	<p>Please check back soon..
+        Students of NIU: <a href="http://aws02.webjcl.com/></a>
+	<p>
         
         </div>
         <!--
