--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
 	  <h1> Want to get started? </h1>
         <hr/>
         
-        Students of NIU: 
-	<p>
+        Students of NIU: test
         
         </div>
         <!--
