--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	  <h1> Want to get started? </h1>
         <hr/>
         
-        Students of NIU: test
+        Students of NIU: <a href="http://aws02.webjcl.com/">http://aws02.webjcl.com/</a> <br>
         
         </div>
         <!--
