--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	  <h1> Want to get started? </h1>
         <hr/>
         
-        Students of NIU: <a href="http://aws02.webjcl.com/">http://aws02.webjcl.com/</a> <br> <br> <br>
+        Students of NIU: <a href="http://aws02.webjcl.com/">http://aws02.webjcl.com/</a> <br> <br>
         Used for testing, but may be used if instance 2 is down. <br>
         Alternate Site: <a href="http://aws03.webjcl.com/">http://aws03.webjcl.com/</a> <br> <br>
         
