--- a/heatmap-2013/index.html
+++ b/heatmap-2013/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>WebJCL Usage 2013</title>
+        <title>WebJCL Usage 2014</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -25,7 +25,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <h1> WebJCL usage for 2013 </h1>
+        <h1> WebJCL usage for 2013-2014 </h1>
 
 	<p> Includes all servers. Hover over a date to see submission qty. First column is Sunday. </p>
 
@@ -38,6 +38,12 @@
 		<h1>Fall 2013</h1>
 		<p> October 29th is hot </p>
 		<div id="FA2013"></div>
+        
+        <h1>Spring 2014</h1>
+		<div id="SP2014"></div>
+        
+        <h1>Summer 2014</h1>
+		<div id="SU2014"></div>
 		
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
